@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-05-21T01:06:03Z",
+  "timestamp" : "2022-05-21T08:19:35Z",
   "count_outdated" : 235,
   "uniques_outdated" : 156,
-  "count" : 291,
-  "uniques" : 188,
+  "count" : 292,
+  "uniques" : 189,
   "clones" : [
     {
       "timestamp": "2022-05-08T00:00:00Z",
@@ -95,6 +95,13 @@
       "count_minmax": [ 6, 13 ],
       "uniques": 10,
       "uniques_minmax": [ 5, 10 ]
+    },
+    {
+      "timestamp": "2022-05-21T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
     }
   ]
 }
