@@ -1,6 +1,6 @@
 {
-  "count": 56,
-  "uniques": 14,
+  "count": 57,
+  "uniques": 15,
   "clones": [
     {
       "timestamp": "2022-05-08T00:00:00Z",
@@ -66,6 +66,11 @@
       "timestamp": "2022-05-20T00:00:00Z",
       "count": 13,
       "uniques": 10
+    },
+    {
+      "timestamp": "2022-05-21T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
