@@ -1,3 +1,10 @@
+2022-05-21T08:19:35Z:
+* notice: last 14d: unq all: 15 57
+* notice: prev accum: outdated-unq outdated-all / unq all: 156 235 / 188 291
+* notice: next accum: outdated-unq outdated-all / unq all: 156 235 / 189 292
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: changed dates: [2022-05-21]
+
 2022-05-21T01:06:03Z:
 * notice: last 14d: unq all: 14 56
 * notice: prev accum: outdated-unq outdated-all / unq all: 156 235 / 183 285
